--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -108,7 +108,7 @@
   padding-left: 1.5rem;
   background: none;
   border: 1px solid transparent;
-  &::before {
+  &::after {
     border-top-color: #929292;
   }
   .title {
