--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -84,34 +84,6 @@
       vertical-align: middle;
     }
   }
-}
-
-.pipe {
-  &.row { margin-top: 10px; }
-  &.premium {
-    .meta {
-      display: none;
-    }
-    p.description {
-      margin-bottom: 0;
-    }
-    .premium-overlay {
-      display: block;
-    }
-    .button.sync, .button.cancel {
-      display: none;
-    }
-  }
-  .premium-overlay {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(250,250,250,.6);
-  }
   .meta {
     clear: both;
     color: $gray;
@@ -148,6 +120,34 @@
         }
       }
     }
+}
+
+.pipe {
+  &.row { margin-top: 10px; }
+  &.premium {
+    .meta {
+      display: none;
+    }
+    p.description {
+      margin-bottom: 0;
+    }
+    .premium-overlay {
+      display: block;
+    }
+    .button.sync, .button.cancel {
+      display: none;
+    }
+  }
+  .premium-overlay {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(250,250,250,.6);
+  }
     .configured {
       color: $green;
       margin-left: 15px;
@@ -192,9 +192,21 @@
 }
 
 .integration-configuration {
+  form {
+    margin-bottom: 0;
+  }
   p {
     margin: 13px 0;
     font-size: 1.1rem;
+  }
+  .meta {
+    margin: 0;
+    .status {
+      margin: 0;
+    }
+  }
+  .loading .fa, .broken .fa {
+    font-size: 61px;
   }
 }
 
