OBM20-specific features and styles

--- a/app/templates/integration-configuration.html
+++ b/app/templates/integration-configuration.html
@@ -8,14 +8,14 @@
 
 <div class="row large-container light">
 
-  <div class="left small-16 columns">
+  <div class="left small-16 columns description-container">
     <p class="description">
       Integration needs to be enabled by linking it with an account.
       Click <strong>"Enable"</strong> to set it up!
     </p>
   </div>
 
-  <div class="right small-8 columns">
+  <div class="right small-8 columns controls-container">
     <button class="button green-bg wide right setup"><i class="fa fa-arrow-circle-right"></i><span class="button-label">Enable</span></button>
     <button class="button white-bg wide right cancel"><i class="fa fa-times"></i><span class="button-label">Cancel</span></button>
   </div>
