--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="right small-8 columns">
-    <button class="button green-bg wide right sync"><i class="fa fa-refresh"></i><span class="button-label">Sync now</span></button>
+    <button class="button green-bg wide right sync"><i class="fa fa-refresh"></i><span class="button-label">Queue now</span></button>
     <div class="cog-box right"></div>
     <button class="button white-bg wide right cancel"><i class="fa fa-times"></i><span class="button-label">Cancel</span></button>
   </div>
