--- a/app/templates/integration-configuration.html
+++ b/app/templates/integration-configuration.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="right small-8 columns">
-    <button class="button green-bg wide right setup"><i class="fa fa-arrow-circle-right"></i><span class="button-label">Enable</span></button>
+    <button class="button pink-bg wide right setup"><i class="fa fa-arrow-circle-right"></i><span class="button-label">Enable</span></button>
     <button class="button white-bg wide right cancel"><i class="fa fa-times"></i><span class="button-label">Cancel</span></button>
   </div>
 
